--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -85,6 +85,9 @@
 .ml5{
     margin-left: 5%;
 }
+.ts{
+    text-shadow: 2px 2px 4px rgba($colorDark, 0.45);
+}
 /* /Margenes generales */
 /* Header Index */
 header video { width: 100%; }
@@ -107,8 +110,10 @@ svg > rect {
 }
 .header__index{
     height: 60vh;
+    justify-content: center;
     @media only screen and (min-width: 768px) {
         height: 100%;
+        justify-content: start;
     }
 }
 .header__title__index {
@@ -116,8 +121,7 @@ svg > rect {
     align-items: center;
     justify-content: center;
     text-align: center;
-    left: 5vw;
-    margin-top: 45%;
+    margin-top: 40%;
     display: flex;
     flex-direction: column;
     @media only screen and (min-width: 325px) {
@@ -125,6 +129,7 @@ svg > rect {
     }
     @media only screen and (min-width: 768px) {
         margin-top: 18vh;
+        left: 5vw;
     }
     @media only screen and (min-width: 1024px) {
         margin-top: 21vh;
@@ -140,7 +145,7 @@ svg > rect {
     border-style: none;
     box-shadow: $shadowLight;
     padding: 9px 30px 11px;
-    margin-top: 2rem;
+    margin-top: 0.80rem;
     z-index: 9000;
     &:hover{
         color: $colorPrimary;
@@ -150,6 +155,7 @@ svg > rect {
     @media only screen and (min-width: 768px) {
         font-size: 1.3rem;
         padding: 7px 20px 9px;
+        margin-top: 2rem;
     }
 }
 .icon__secondary{
@@ -328,6 +334,18 @@ svg > rect {
         width: 40vw;
     }
 }
+.order__1__phone{
+    order: 1;
+    @media only screen and (min-width: 768px) {
+        order: 2;
+    }
+}
+.order__2__phone{
+    order: 2;
+    @media only screen and (min-width: 768px) {
+        order: 1;
+    }
+}
 .link__more{
     font-weight: 500;
     color: $colorSecondary;
@@ -337,9 +355,12 @@ svg > rect {
         color: $colorMiddle;
     }
     @media only screen and (min-width: 325px) {
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
     @media only screen and (min-width: 768px) {
+        font-size: 1.3rem;
+    }
+    @media only screen and (min-width: 1024px) {
         font-size: 1.5rem;
     }
 }
@@ -576,11 +597,13 @@ svg > rect {
     }
 }
 .action__content{
-    margin-top: 5%;
+    margin-top: 4%;
     margin-bottom: 1%;
+    @media only screen and (min-width: 768px) {
+        margin-top: 2%;
+    }
     @media only screen and (min-width: 1024px) {
         margin-top: 3%;
-        margin-bottom: 1%;
     }
 }
 .action__icons{
@@ -589,6 +612,12 @@ svg > rect {
     &:hover{
         color: $colorBright;
         text-shadow: 3px 3px 11px rgba($colorBright, 0.45);
+    }
+    @media only screen and (min-width: 768px) {
+        font-size: 2rem;
+    }
+    @media only screen and (min-width: 1024px) {
+        font-size: 2.3rem;
     }
 }
 /* /Call to action "Seguinos" */
@@ -928,9 +957,11 @@ svg > rect {
 .cotizacion__dolar{
     margin-bottom: 5%;
     max-width: 290px;
+    order: 2;
     @media only screen and (min-width: 768px) {
         margin-bottom: 0;
         max-width: 290px;
+        order: 1;
     }
     @media only screen and (min-width: 1024px) {
         max-width: 100%;
@@ -939,9 +970,11 @@ svg > rect {
 .cotizacion__granos{
     margin-bottom: 5%;
     max-width: 290px;
+    order: 1;
     @media only screen and (min-width: 768px) {
         margin-bottom: 0;
         max-width: 290px;
+        order: 2;
     }
     @media only screen and (min-width: 1024px) {
         max-width: 100%;
