--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ p {
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   padding: 2% 3% 3% 3%;
   width: 100vw;
-  z-index: 2; }
+  z-index: 11; }
   @media only screen and (min-width: 768px) {
     .contains__nav {
       top: 30px;
@@ -304,7 +304,7 @@ svg > rect {
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   padding: 9px 30px 11px;
   margin-top: 0.80rem;
-  z-index: 9000; }
+  z-index: 10; }
   .btn__index:hover {
     color: #367c2b;
     background-color: #fff;
@@ -551,6 +551,21 @@ svg > rect {
   @media only screen and (min-width: 1024px) {
     .style__h1 {
       font-size: 3.7rem; } }
+
+.style__h3 {
+  font-size: 1.3rem;
+  font-weight: normal;
+  color: #666; }
+  @media only screen and (min-width: 768px) {
+    .style__h3 {
+      font-size: 1.8rem;
+      font-weight: normal;
+      color: #666; } }
+  @media only screen and (min-width: 1024px) {
+    .style__h3 {
+      font-size: 2.5rem;
+      font-weight: normal;
+      color: #666; } }
 
 .display__i {
   display: inline; }
